# type-signature

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-and-test.yml  publish.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
src/: lib.rs
tests/: derive-test.rs
