[package]
name = "type-signature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compile-time stable structural hash of a Rust type, via a derive macro."
documentation = "https://docs.rs/type-signature"
readme = "README.md"
keywords = ["hash", "type", "signature", "schema", "no-std"]
categories = ["data-structures", "encoding", "no-std", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
type-signature-derive = { version = "=0.1.1", path = "./derive/" }

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

[lints]
workspace = true

[workspace]
members = [".", "./derive/"]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarredAllen/type-signature"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
# Set the priority to -1 to allow overriding specific lints that we disagree with.
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints:

# Restriction lints
unnecessary_self_imports = "warn"
allow_attributes_without_reason = "warn"

# no_std discipline
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
