[package]
name = "type-signature-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for the `type-signature` crate. Not intended for direct use - depend on `type-signature` instead."
documentation = "https://docs.rs/type-signature-derive"
readme = "README.md"
keywords = ["hash", "type", "signature", "derive", "no-std"]
categories = ["data-structures", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lints]
workspace = true
